--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": ">=5.3.3",
         "nette/nette": "2.0.*",
-        "symfony/symfony": "2.3.*",
+        "symfony/symfony": "2.3.*"
     },
     "autoload": {
         "psr-0": {
