added support for {asset ...} macro

--- a/src/LatteBundle/Resources/config/services.yml
+++ b/src/LatteBundle/Resources/config/services.yml
@@ -26,4 +26,5 @@ services:
 
     latte.helpers:
         class: %latte.helpers.class%
-        arguments: [@router]
+        calls:
+            - [ setContainer, [ @service_container ]]
