--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/symfony": "2.3.*"
     },
     "require-dev": {
-        "nette/tester": "*"
+        "nette/tester": "*",
+        "janmarek/mockista": "*"
     },
     "autoload": {
         "psr-0": {
