--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     },
     "require-dev": {
         "nette/tester": "*",
-        "janmarek/mockista": "*"
+        "janmarek/mockista": "*",
+
+        "symfony/assetic-bundle": "2.3.*"
     },
     "autoload": {
         "psr-0": {
