--- a/src/LatteBundle/Resources/config/services.yml
+++ b/src/LatteBundle/Resources/config/services.yml
@@ -13,7 +13,7 @@ services:
             - [setCacheDir, [%latte.cache_dir%]]
 
     assetic.latte_formula_loader:
-        class: %assetic.cached_formula_loader.class%
+        class: %assetic.cached_formula_loader.class% # TODO: LatteBundle should work without symfony/assetic-bundle
         arguments: [@assetic.latte_formula_loader.real, @assetic.config_cache, %kernel.debug%]
         tags:
             - { name: assetic.formula_loader, alias: latte }
