--- a/tests/LatteBundle/DependencyInjection/config.yml
+++ b/tests/LatteBundle/DependencyInjection/config.yml
@@ -5,4 +5,4 @@ framework:
     templating:
         engines: [ latte ]
     router:
-        resource: ""
+        resource: "@TestingBundle/routing.yml"
